--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -65,10 +65,9 @@ h3 {
 }
 
 .container {
-    // max-width: 1340px;
+
     margin: 0 auto;
-    // min-width: 1100px;
-    // overflow: hidden;
+    max-width: 1342px;
 }
 
 .hidden {
@@ -95,11 +94,9 @@ h3 {
 /* -- navigation menu */
 
 .menu {
-    display: block;
+    display: flex;
     padding: 0 0 0 74px;
     min-height: 163px;
-    // width: 1190px;
-    // min-width: 1190px;
     margin: 0 auto;
     background-image: url(../images/anchor.png);
     background-repeat: no-repeat;
@@ -119,11 +116,9 @@ h3 {
 .menu__link {
     display: inline-block;
     line-height: 93px;
-    // width: 120px;
     width: 11em;
 }
 
-.menu__linkP {}
 
 /* -- timer */
 
@@ -143,7 +138,7 @@ h3 {
 
 /* -- title block  */
 
-.title__heading {}
+
 
 .title {
     margin-top: 140px;
@@ -298,7 +293,6 @@ h3 {
 }
 
 .form__container {
-    // width: 526px;
     width: 50%;
 }
 
@@ -311,7 +305,6 @@ h3 {
 .booking__image {
     background-image: url(../images/about-img.png);
     position: relative;
-    // width: 537px;
     width: 50%;
     height: 550px;
     padding: 0;
@@ -334,9 +327,7 @@ h3 {
 
 .booking__input,
 .booking__select {
-    // width: 220px;
     width: 17em;
-    // height: 55px;
     height: 4em;
     background: #E5E5E5;
     border-radius: 4.65928px;
@@ -360,7 +351,6 @@ h3 {
 
 .button--submit {
     width: 82%;
-    // margin: 0 15px 0 0;
     height: 55px;
     background: #E8C300;
     border-radius: 4px;
@@ -482,8 +472,6 @@ h3 {
 .foodmenu {
     color: $secondary-color;
     padding: 60px 45px 40px 45px;
-    // min-width: 1125px;
-
 }
 
 .foodmenu__introtext {
@@ -520,6 +508,7 @@ h3 {
     padding: 0px 0px;
     columns: 320px 3;
     column-gap: 46px;
+    text-align: center;
 }
 
 .foodmenu__item {
@@ -553,12 +542,11 @@ h3 {
 /* private-events section */
 
 .private-events {
-    // display: flex;
-    min-height: 584px;
+    // min-height: 584px;
     background-image: url(../images/bg_private_events.png);
     background-repeat: no-repeat;
     text-align: center;
-    padding-top: 45px;
+    padding: 45px 0px;
     overflow: hidden;
 }
 
@@ -590,7 +578,6 @@ h3 {
     background-repeat: no-repeat;
     background-position: 0 0;
     top: 80px;
-    /* left: -56px; */
     right: 153px;
     z-index: 50;
 }
@@ -646,16 +633,13 @@ h3 {
     top: 232px;
 }
 
-/* adaptive */ 
 
-@media (max-width:1024px) {
+/* adaptive */
+
+@media only screen and (max-width:1024px) {
 
     h1 {
         font-size: 7em;
-    }
-
-    .heading {
-        padding-bottom: 0px;
     }
 
     .menu__link {
@@ -719,5 +703,263 @@ h3 {
     .foodmenu__item-price {
         font-size: 1.3em;
         margin-right: 0px;
+    }
+}
+
+/* tablet css */
+
+@media only screen and (max-width:768px) {
+    .menu__link {
+        width: 51px;
+    }
+
+    .schedule,
+    .socialicons,
+    .timer,
+    .booking__image,
+    .slider__image {
+        display: none;
+    }
+
+    .form__container {
+        width: 80%;
+    }
+
+    .booking__contacts {
+        margin-top: 30px;
+    }
+
+    .slider__textbox {
+        width: 100%;
+        padding-right: 0px;
+    }
+
+    .foodmenu__dishes-item {
+        width: 92px;
+    }
+
+    .row {
+        // flex-flow: column;
+    }
+
+    .private-events {
+        background-color: black;
+        background-position: bottom;
+        padding: 40px 0px;
+    }
+
+    .private-events__image--weddings::after,
+    .private-events__image--corporate::after {
+        display: none;
+    }
+
+    .private-events__image--weddings,
+    .private-events__image--corporate {
+        background-size: contain;
+        width: 300px;
+        height: 300px;
+
+    }
+
+    .private-events__image-title {
+        transform: rotate(0);
+        left: 0;
+        top: 0;
+        padding: 5px;
+        width: auto;
+        height: auto;
+        // border: 10px solid #E8C300
+        background-color: #E8C300;
+        border-radius: 5px;
+    }
+
+    .private-events__contacts {
+        line-height: 1.3em;
+        padding: 0px 5px;
+        letter-spacing: 0.1em;
+    }
+}
+
+/* mobile css 600px  */
+
+@media only screen and (max-width:550px) {
+
+    .menu,
+    .timer,
+    .schedule,
+    .socialicons,
+    .booking__image,
+    .slider__image {
+        display: none;
+
+    }
+
+    .header {
+        min-height: 570px;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+        font-size: 2em;
+        padding: 0px;
+    }
+
+    .title {
+        margin: 0px;
+        padding: 40px 0px 0px 0px;
+    }
+
+    .heading {
+        background: none;
+    }
+
+    .button {
+        margin-bottom: 20px;
+    }
+
+    .linkdown {
+        text-align: center;
+        margin-top: 100px;
+    }
+
+    .title__buttons__container {
+        margin-top: 80px;
+
+    }
+
+    .booking {
+        padding: 40px 0px;
+        min-height: 470px;
+    }
+
+    .form__container {
+        width: auto;
+        display: block;
+    }
+
+    .booking__form {
+        min-width: auto;
+        padding-top: 0px;
+    }
+
+    .add--right--margin {
+        margin-right: 0px;
+    }
+
+    .booking__select {
+        margin-bottom: 9px;
+    }
+
+    .button--submit {
+
+        width: 218px;
+        margin-top: 30px;
+        margin-bottom: 50px;
+    }
+
+    .booking__contacts {
+        margin: 0 30px;
+        line-height: 1.2em;
+    }
+
+    .specialties {
+        min-width: auto;
+        width: auto;
+        min-height: 540px;
+        padding: 0px 0px 40px 0px;
+    }
+
+    .slider__textbox {
+        width: auto;
+        padding: 0px 20px;
+        margin-top: 0px;
+    }
+
+    .slider__text--bigger {
+        font-size: 13px;
+    }
+
+    .slider__nav {
+        margin-bottom: -100px;
+    }
+
+    .foodmenu {
+        padding: 20px 20px
+    }
+
+    .foodmenu__introtext {
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.2em;
+    }
+
+    .foodmenu__dishes-list {
+        margin-top: 30px;
+    }
+
+    .foodmenu__dishes-item {
+        width: auto;
+        padding: 0px 1px 0px 1px;
+        line-height: normal;
+        height: auto;
+        border: none;
+
+    }
+
+    .foodmenu__item {
+        padding-bottom: 15px;
+    }
+
+    .row {
+        flex-flow: column;
+    }
+
+    .private-events {
+        background-color: black;
+        background-position: bottom;
+        padding: 40px 0px;
+    }
+
+    .private-events__image--weddings::after,
+    .private-events__image--corporate::after {
+        display: none;
+    }
+
+    .private-events__image--weddings,
+    .private-events__image--corporate {
+        background-size: contain;
+        width: 300px;
+        height: 300px;
+
+    }
+
+    .private-events__image-title {
+        transform: rotate(0);
+        left: 0;
+        top: 0;
+        padding: 5px;
+        width: auto;
+        height: auto;
+        // border: 10px solid #E8C300
+        background-color: #E8C300;
+        border-radius: 5px;
+    }
+
+    .private-events__contacts {
+        line-height: 1.3em;
+        padding: 0px 5px;
+        letter-spacing: 0.1em;
+    }
+}
+
+@media only screen and (max-width:280px){
+    .foodmenu__item-price{
+        font-size: 1em;
+    }
+
+    .foodmenu__item-name{
+        font-size: 1em;
     }
 }
